# validacion-svd-rdpg

./: .gitignore  README.md  pyproject.toml
notebooks/: EliteTwitter.ipynb  SyntheticData.ipynb  TwitterGraphs.ipynb  VaccinesGraphs.ipynb  YouTubeGraphs.ipynb
output/: graph_metrics_with_slope.csv  graphs_summary_metrics.csv
output/synthetic/: embedding_dimensions_synthetic_networks.csv
